[gd_scene load_steps=6 format=3 uid="uid://d4mteu7e2gwp3"]

[ext_resource type="Texture2D" uid="uid://ci5ghica74liq" path="res://Textures/Dashboard/ColouredLight/light_frame.png" id="1_8q0lo"]
[ext_resource type="Script" path="res://Dashboard/ColouredLight/coloured_light.gd" id="1_r1ws7"]
[ext_resource type="Texture2D" uid="uid://5illrksmwva0" path="res://Textures/Dashboard/ColouredLight/light_off.png" id="2_hmu5s"]
[ext_resource type="Texture2D" uid="uid://yapas2vwm15y" path="res://Textures/Dashboard/ColouredLight/light_on.png" id="3_5oeth"]
[ext_resource type="Texture2D" uid="uid://dtl5b1u3dqwt8" path="res://Textures/Dashboard/ColouredLight/light_shadow.png" id="4_onuwd"]

[node name="ColouredLight" type="Node2D"]
script = ExtResource("1_r1ws7")

[node name="Frame" type="Sprite2D" parent="."]
texture = ExtResource("1_8q0lo")

[node name="LightOff" type="Sprite2D" parent="."]
texture = ExtResource("2_hmu5s")

[node name="LightOn" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_5oeth")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.180392)
texture = ExtResource("4_onuwd")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
